Src/Workspace/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
17:29:57 **** Incremental Build of configuration Debug for project TP1 ****
make -r -j4 all 
Building file: ../source/App.c
Building file: ../source/interrupts.c
Invoking: MCU C Compiler
Invoking: MCU C Compiler
arm-none-eabi-gcc -DCPU_MK64FN1M0VLL12 -D__USE_CMSIS -DDEBUG -I../source -I../ -I../SDK/CMSIS -I../SDK/startup -O0 -fno-common -g3 -Wall -c -ffunction-sections -fdata-sections -ffreestanding -fno-builtin -mcpu=cortex-m4 -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -MMD -MP -MF"source/App.d" -MT"source/App.o" -MT"source/App.d" -o "source/App.o" "../source/App.c"
arm-none-eabi-gcc -DCPU_MK64FN1M0VLL12 -D__USE_CMSIS -DDEBUG -I../source -I../ -I../SDK/CMSIS -I../SDK/startup -O0 -fno-common -g3 -Wall -c -ffunction-sections -fdata-sections -ffreestanding -fno-builtin -mcpu=cortex-m4 -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -MMD -MP -MF"source/interrupts.d" -MT"source/interrupts.o" -MT"source/interrupts.d" -o "source/interrupts.o" "../source/interrupts.c"
In file included from ../source/App.c:11:0:
../source/interrupts.h:41:1: error: unknown type name 'bool'; did you mean '_Bool'?
 bool gpioIRQ (pin_t pin, uint8_t irqMode, pinIrqFun_t irqFun);
 ^~~~
 _Bool
../source/interrupts.h:41:15: error: unknown type name 'pin_t'; did you mean 'int'?
 bool gpioIRQ (pin_t pin, uint8_t irqMode, pinIrqFun_t irqFun);
               ^~~~~
               int
../source/interrupts.h:41:26: error: unknown type name 'uint8_t'
 bool gpioIRQ (pin_t pin, uint8_t irqMode, pinIrqFun_t irqFun);
                          ^~~~~~~
../source/App.c: In function 'App_Init':
../source/App.c:50:5: warning: implicit declaration of function 'gpioIRQ'; did you mean 'gpioRead'? [-Wimplicit-function-declaration]
     gpioIRQ(PIN_SW3, GPIO_IRQ_MODE_FALLING_EDGE, &button_handler);
     ^~~~~~~
     gpioRead
At top level:
../source/App.c:67:13: warning: 'delayLoop' defined but not used [-Wunused-function]
 static void delayLoop(uint32_t veces)
             ^~~~~~~~~
make: *** [source/App.o] Error 1
make: *** Waiting for unfinished jobs....
../source/interrupts.c:20:42: error: unknown type name 'pinIrqFun_t'
 bool gpioIRQ(pin_t pin, uint8_t irqMode, pinIrqFun_t irqFun);
                                          ^~~~~~~~~~~
../source/interrupts.c:23:1: error: unknown type name 'pinIrqFun_t'
 pinIrqFun_t interrupt_matrix[5][32];
 ^~~~~~~~~~~
../source/interrupts.c:260:42: error: unknown type name 'pinIrqFun_t'
 bool gpioIRQ(pin_t pin, uint8_t irqMode, pinIrqFun_t irqFun){
                                          ^~~~~~~~~~~
../source/interrupts.c: In function 'PORTA_IRQHandler':
../source/interrupts.c:326:3: warning: implicit declaration of function 'PORT_ClearInterruptFlag' [-Wimplicit-function-declaration]
   PORT_ClearInterruptFlag(PA, pin_num);
   ^~~~~~~~~~~~~~~~~~~~~~~
../source/interrupts.c:328:2: error: called object is not a function or function pointer
  interrupt_matrix[PA][pin_num]();
  ^~~~~~~~~~~~~~~~
../source/interrupts.c: In function 'PORTB_IRQHandler':
../source/interrupts.c:336:2: error: called object is not a function or function pointer
  interrupt_matrix[PB][pin_num]();
  ^~~~~~~~~~~~~~~~
../source/interrupts.c: In function 'PORTC_IRQHandler':
../source/interrupts.c:344:2: error: called object is not a function or function pointer
  interrupt_matrix[PC][pin_num]();
  ^~~~~~~~~~~~~~~~
../source/interrupts.c: In function 'PORTD_IRQHandler':
../source/interrupts.c:352:2: error: called object is not a function or function pointer
  interrupt_matrix[PD][pin_num]();
  ^~~~~~~~~~~~~~~~
../source/interrupts.c: In function 'PORTE_IRQHandler':
../source/interrupts.c:360:2: error: called object is not a function or function pointer
  interrupt_matrix[PE][pin_num]();
  ^~~~~~~~~~~~~~~~
../source/interrupts.c: At top level:
../source/interrupts.c:363:6: warning: conflicting types for 'PORT_ClearInterruptFlag'
 void PORT_ClearInterruptFlag (int port_num, int pin_num){
      ^~~~~~~~~~~~~~~~~~~~~~~
../source/interrupts.c:326:3: note: previous implicit declaration of 'PORT_ClearInterruptFlag' was here
   PORT_ClearInterruptFlag(PA, pin_num);
   ^~~~~~~~~~~~~~~~~~~~~~~
../source/interrupts.c:380:13: warning: 'disable_interrupt_pins' defined but not used [-Wunused-function]
 static void disable_interrupt_pins(int port_num, int pin_num){
             ^~~~~~~~~~~~~~~~~~~~~~
../source/interrupts.c:370:13: warning: 'enable_interrupt_pins' defined but not used [-Wunused-function]
 static void enable_interrupt_pins(int port_num, int pin_num){
             ^~~~~~~~~~~~~~~~~~~~~
make: *** [source/interrupts.o] Error 1
